--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,17 +3,17 @@
     <data>
         <variable
             name="viewModel"
-            type="dev.nicoloakacat.numberninja.ui.notifications.NotificationsViewModel" />
+            type="dev.nicoloakacat.numberninja.ui.profile.ProfileViewModel" />
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.notifications.NotificationsFragment">
+    tools:context=".ui.profile.ProfileFragment">
 
     <TextView
-        android:id="@+id/text_notifications"
+        android:id="@+id/text_profile"
         android:text="@{viewModel.text}"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
