--- a/app/src/main/res/layout/fragment_rankings.xml
+++ b/app/src/main/res/layout/fragment_rankings.xml
@@ -3,17 +3,17 @@
     <data>
         <variable
             name="viewModel"
-            type="dev.nicoloakacat.numberninja.ui.dashboard.DashboardViewModel" />
+            type="dev.nicoloakacat.numberninja.ui.rankings.RankingsViewModel" />
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.dashboard.DashboardFragment">
+    tools:context=".ui.rankings.RankingsFragment">
 
     <TextView
-        android:id="@+id/text_dashboard"
+        android:id="@+id/text_rankings"
         android:text="@{viewModel.text}"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
