--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_play">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="dev.nicoloakacat.numberninja.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/navigation_play"
+        android:name="dev.nicoloakacat.numberninja.ui.play.PlayFragment"
+        android:label="@string/title_play"
+        tools:layout="@layout/fragment_play" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="dev.nicoloakacat.numberninja.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_rankings"
+        android:name="dev.nicoloakacat.numberninja.ui.rankings.RankingsFragment"
+        android:label="@string/title_rankings"
+        tools:layout="@layout/fragment_rankings" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="dev.nicoloakacat.numberninja.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_profile"
+        android:name="dev.nicoloakacat.numberninja.ui.profile.ProfileFragment"
+        android:label="@string/title_profile"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
