--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -92,7 +92,7 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:max="5"
-            android:progress="@{viewModel.progress}"
+            android:progress="@{viewModel.countdownProgress}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
