--- a/app/src/main/res/layout/fragment_rankings.xml
+++ b/app/src/main/res/layout/fragment_rankings.xml
@@ -13,7 +13,8 @@
     tools:context=".ui.rankings.RankingsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/top_users"
+        android:id="@+id/rankings_rv"
+        android:padding="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
