--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,23 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="303"
+    android:viewportHeight="256">
+  <group android:scaleX="0.43"
+      android:scaleY="0.43"
+      android:translateX="86.355"
+      android:translateY="72.96">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M295.3,130.2c-15.4,-4.8 -17.2,-13.5 -22.7,-18.8c-11.7,-11.7 -27.1,-1.4 -33.2,3.4c-6.6,-37.4 -33.5,-65.1 -83.2,-65.1c-58.2,0 -85.3,38.1 -85.3,85.3s28,111.9 85.3,111.9s85.3,-64.6 85.3,-111.9c0,-0.5 0,-1.1 0,-1.6c10.5,3 11.2,14.9 11.2,14.9s0,24.1 21.3,24.1c-7.8,-14.4 -2.8,-21.8 -2.8,-29.3c0,-4.8 -1.6,-8.3 -3.7,-11.2C272.8,135.7 284.7,141.2 295.3,130.2zM221.2,145.5c0,11.7 -9.6,21.5 -21.3,24.1c-5,1.1 -24.5,2.8 -44,2.8l0,0l0,0c-19.5,0 -39,-1.6 -44,-2.8c-11.7,-2.3 -21.3,-12.2 -21.3,-24.1v-6c0,-6 5,-10.5 10.5,-10.5c18.6,0 25.4,5.3 54.6,5.3s36,-5.3 54.6,-5.3c5.5,0 10.5,4.8 10.5,10.5v6H221.2z"
+        android:fillColor="#000000"/>
+    <path
+        android:pathData="M136.9,157.9c-0.5,0 -0.7,0 -1.4,-0.2l-30.3,-11c-2.1,-0.7 -3.2,-3 -2.3,-5c0.7,-2.1 3,-3.2 5,-2.3l30.3,11c2.1,0.7 3.2,3 2.3,5C140.1,157 138.5,157.9 136.9,157.9z"
+        android:fillColor="#000000"/>
+    <path
+        android:pathData="M175.1,157.9c-1.6,0 -3.2,-1.1 -3.7,-2.8c-0.7,-2.1 0.2,-4.4 2.3,-5l30.3,-11c2.1,-0.7 4.4,0.2 5,2.3c0.7,2.1 -0.2,4.4 -2.3,5l-30.3,11C176.3,157.9 175.8,157.9 175.1,157.9z"
+        android:fillColor="#000000"/>
+    <path
+        android:pathData="M90.5,48.6c-2.1,-2.1 -5.3,-2.1 -7.6,0l-6.6,6.6L29.6,8c-3,-3 -7.6,-3 -10.3,0L11,16.2c-3,3 -3,7.6 0,10.3l46.8,46.8L51.1,80c-2.1,2.1 -2.1,5.3 0,7.6c1.1,1.4 2.3,1.8 3.7,1.8s2.8,-0.5 3.7,-1.6l6.6,-6.6l9.4,9.4c0.7,-1.6 1.6,-3.4 2.3,-5l-8,-8L80,66.2l6.2,6.2c1.1,-1.4 2.3,-2.8 3.7,-3.9l-6,-6l6.6,-6.6C92.6,53.8 92.6,50.6 90.5,48.6zM35.8,33.2H25.2V22.7h10.5V33.2zM49.1,46.5H38.5V36h10.5V46.5zM51.6,59.8V49.3h10.5v10.5H51.6z"
+        android:fillColor="#000000"/>
+  </group>
 </vector>
