--- a/app/src/main/res/layout/fragment_rankings.xml
+++ b/app/src/main/res/layout/fragment_rankings.xml
@@ -15,6 +15,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="50dp"/>
+
+    <com.google.android.material.chip.Chip
+        android:id="@+id/rankings_error_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/error_msg"
+        style="@style/chipErrorStyle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.98"
+        android:visibility="gone"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
